--- a/nearby_games_integradora/pubspec.yaml
+++ b/nearby_games_integradora/pubspec.yaml
@@ -9,8 +9,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  cupertino_icons: ^1.0.2
+  google_sign_in: ^5.2.2
+  shared_preferences: ^2.0.10
+  # googleapis: ^0.60.5
+  # googleapis_auth: ^0.3.11
+  # googleapis_people: ^0.4.0
+  # cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
